5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1585_2049.log
== TEST (2019-03-21 11:54:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input("qual e o dividendo: "))
divisor=int(input("qual e o divisor: "))

operacao=dividendo // divisor
resto=dividendo visor
print(dividendo)
print(divisor)
print(operacao)
print(resto)
-- ERROR:
File "XXXX", line 8
    resto=dividendo visor
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:54:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input("qual e o dividendo: "))
divisor=int(input("qual e o divisor: "))

operacao=dividendo // divisor
resto=dividendo%visor
print(dividendo)
print(divisor)
print(operacao)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    resto=dividendo%visor
NameError: name 'visor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input("qual e o dividendo: "))
divisor=int(input("qual e o divisor: "))

operacao=dividendo // divisor
resto=dividendo%visor
print(dividendo)
print(divisor)
print(operacao)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    resto=dividendo%visor
NameError: name 'visor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input("qual e o dividendo: "))
divisor=int(input("qual e o divisor: "))

operacao=dividendo // divisor
resto=dividendo%divisor
print(dividendo)
print(divisor)
print(operacao)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:55:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input("qual e o dividendo: "))
divisor=int(input("qual e o divisor: "))

operacao=dividendo // divisor
resto=dividendo%divisor
print(dividendo)
print(divisor)
print(operacao)
print(resto)
-- EXECUTION TIME:
0.106373
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
